refaktorering: håndterer OppgaveEgenskaper fra Oppgave. Lar JPA håndtere oppdateringer via cascade og orphanRemoval